welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:5: error: ';' expected but '(' found.
		(i%2===0) ? gauche() : droite();
                                             ^