welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def run() {
	var i = 0;
	for (i <- 1 to 10) { 
		(i%2===0) ? gauche() : droite();
		
	}
	
}
